started doing auth

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,8 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-line-length = 105
+line-length = 120
 select = ["ALL"]
+
+[tool.black]
+line-length = 120
