--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 gunicorn = "^21.2.0"
 django = "^4.2.7"
 python-dotenv = "^1.0.0"
+pillow = "^10.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
