--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 gunicorn = "^21.2.0"
-django = "^4.2.7"
+django = "^5.0.3"
 python-dotenv = "^1.0.0"
 pillow = "^10.2.0"
 
@@ -18,6 +18,7 @@ pytest-coverage = "^0.0"
 ruff = "^0.1.3"
 mypy = "^1.6.1"
 pytest = "^7.4.3"
+black = "^24.2.0"
 
 [build-system]
 requires = ["poetry-core"]
